outputs/generated_env/kubernetes/network_policies/cybersim-subnet-2-allow-prometheus-to-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-prometheus-to-keycloak
  namespace: cybersim-subnet-2
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-zone-a
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  policyTypes:
  - Ingress
